--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>
+            Контакты
+        </h1>
+    </div>
 
 </body>
 </html>
